Fixing line breaks on edit profile page

--- a/wp-content/plugins/users-ultra/templates/basic/css/xoouserultra.css
+++ b/wp-content/plugins/users-ultra/templates/basic/css/xoouserultra.css
@@ -261,7 +261,6 @@
 
 .xoouserultra-field-type {
 	float: left;
-	width: 34%;
 }
 
 .xoouserultra-field-value {
